...
    <string name="add_new_billable_unit_label">Unit (eg. 100mg)</string>
    <string name="add_new_billable_composition_label">Composition (eg. tablet)</string>
    <string name="add_new_billable_composition_prompt">Select a composition</string>
    <string name="add_new_billable">Add</string>

    <!-- CurrentPatientsFragment -->
    <string name="current_patients_fragment_label">Checked in members</string>
    <string name="identification_button">Look up member</string>
    <string name="current_patients_empty_text">There are no checked-in members.</string>
    <plurals name="current_patients_label" >
        <item quantity="one">%d Current Member</item>
        <item quantity="other">%d Current Members</item>
    </plurals>

...
    <string name="member_search_fragment_label">Search</string>

    <!-- PresentingConditionsFragment -->
    <string name="fragment_presenting_conditions">Enter presenting conditions</string>

    <!-- CheckinMemberDetailFragment -->
    <string name="detail_fragment_label">Member</string>
    <string name="absentee_notification">Needs to complete enrollment</string>
    <string name="absentee_action">Enroll</string>
    <string name="replace_card_notification">Needs new member card</string>
    <string name="replace_card_action">Issue</string>
    <string name="identification_approved">has been successfully checked in.</string>
    <string name="household_panel_header">Household</string>
    <string name="empty_household_list">No other household members</string>
    <plurals name="household_members_label" >
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
...
    <!-- ClinicNumberDialogFragment -->
    <string name="clinic_number_save">Complete check in</string>
    <string name="radio_opd">OPD</string>
    <string name="radio_delivery">Delivery</string>
    <string name="clinic_number">Number</string>
    <string name="clinic_number_button">Submit</string>
    <string name="clinic_number_prompt">Enter the member\'s clinic number</string>

    <string name="newborn_error_message">Newborns must be less than 12 months old</string>

    <!-- EnrollNewbornInfoFragment -->
    <string name="enroll_newborn_activity_title">Newborn</string>
    <string name="enrollment_completed_snackbar_message">Newborn successfully enrolled.</string>
...
