...

        <TextView
            android:id="@+id/empty_member_search_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space16"
            android:text="@string/member_no_search_results_text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/member_search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />
...
