<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/barcode_preview_surface"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </SurfaceView>

    <Button
        android:id="@+id/search_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:text="@string/search_member_hint"/>
</LinearLayout>
